src/test/deca/context/invalid/class/64-declParamVoid1.deca
/* Description:
    teste la regle (2.9) de la vérification contextuelles
    Déclaration de paramètre void

    Historique:
      cree le 21/01/2020
*/

class A {
  int methode(void c){} // c est de type void
}
